# normalizing-flows-study

./: .gitignore  README.md  debug_masks.py  debug_masks2.py  debug_naf.py  debug_network.py  pyproject.toml  requirements.txt  test_batch_norm_benefits.py  test_existing_maf.py  test_iaf_fix.py
.github/workflows/: ci.yml
examples/: visualization_demo.py
notebooks/: 1_Basics_Coupling_Flow.ipynb  2_Autoregressive_Flows.ipynb  3_Continous_flows.ipynb  4_Neural_Spline_Flows.ipynb
plots/: _common.py  fig_benchmark.py  fig_cnf.py  fig_curves.py  fig_gallery.py  fig_gif.py  fig_interp.py  fig_recon.py  make_cache.py
src/: flows.py  models.py  utils.py
src/flows/: __init__.py  autoregressive.py  continuous.py  coupling.py  flow.py  spline.py
src/models/: __init__.py  normalizing_flow_model.py  real_nvp.py  real_nvp_spline.py
src/training/: __init__.py  schedulers.py
src/visualization/: __init__.py  diagnostics.py  flow_visualizer.py  jacobian_analyzer.py
tests/: test_cuda_kernels.py  test_diagnostics.py  test_flows_visualization.py  test_gradient_checkpointing.py  test_iaf_stability.py  test_jacobian_analyzer.py  test_maf_stability.py  test_memory_profiling_utils.py  test_mixed_precision.py  test_neural_autoregressive_flow.py  test_planar_radial_flows.py  test_residual_flow.py  test_schedulers.py  test_stability.py  test_sylvester_flow.py
tests/correctness/: __init__.py  run_tests.py  test_autoregressive_mask_correctness.py  test_bugfix_regression.py  test_distribution_preservation.py  test_gradcheck.py  test_invertibility.py  test_logdet_autodiff.py
(+38 files in other folders)
